@@ -301,6 +301,9 @@ Extension Modules
 Library
 -------
 
+- bpo-29942: Fix a crash in itertools.chain.from_iterable when encountering
+  long runs of empty iterables.
+
 - bpo-10030: Sped up reading encrypted ZIP files by 2 times.
 
 - bpo-29204: Element.getiterator() and the html parameter of XMLParser() were
